fix: background blurred when modal is open.

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,7 @@
 .read-the-docs {
   color: #888;
 }
+
+.modalActive {
+  filter: blur(5px);
+}
