--- a/src/components/form-component/form-component.module.css
+++ b/src/components/form-component/form-component.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   border: #f1f3f5 solid 1px;
   background-color: #f1f3f5;
-  border-radius: 13px;
+  border-radius: 15px;
   width: 100vh;
   margin: auto;
   padding: 30px;
