--- a/src/components/ui-components/button-component/button-component.module.css
+++ b/src/components/ui-components/button-component/button-component.module.css
@@ -1,11 +1,12 @@
-.submit-button {
+.custom-button {
   padding: 10px;
   width: 20vh;
   background-color: #748ffc;
   border: none;
   border-radius: 5px;
+  font-size: 1rem;
 }
 
-.submit-button:hover {
+.custom-button:hover {
   background-color: #3b5bdb;
 }
